Fix all the bugs. Better sorting and more readable listing.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -73,3 +73,12 @@ textarea {
 button {
     padding:10px
 }
+
+select {
+    width: 90%
+}
+
+dl dt label {
+    text-align: left;
+    font-weight: bold;
+}
